--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@
   padding: 2rem;
 }
 
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
 /* nav */
 nav ul {
   list-style-type: none;
@@ -71,20 +76,6 @@ td a {
   padding: 0.5rem;
 }
 
-/* media item dialog */
-dialog {
-  position: fixed;
-  height: 90%;
-  background: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-  color: rgba(255, 255, 255, 0.87);
-}
-
-dialog img,
-video {
-  height: 70%;
-  object-fit: contain;
-}
 
 /* single view */
 img,
