--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-*{
+* {
   box-sizing: border-box;
 }
 
 :root {
   font-family: system-ui, sans-serif;
-/*   line-height: 1.5;
+  /*   line-height: 1.5;
   font-weight: 400; */
 
   color-scheme: light dark;
@@ -23,7 +23,7 @@
   padding: 2rem;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
@@ -51,11 +51,23 @@ nav a:hover {
   background-color: #111111;
 }
 
-
 /* single view */
-img,
-video {
-  max-width: 100%;
+
+.single-book-container{
+  display: grid;
+  grid-template-columns: 210px auto;
+  grid-column-gap: 20px;
+}
+.book-cover{
+  width: 100%;
+  margin-top: 10px;
+}
+.single-book-info{
+  margin:0;
+  font-size: 1.5rem;
+  line-height: 1;
+  max-width: 800px;
+  padding: 15px;
 }
 
 /* Form */
@@ -104,33 +116,53 @@ button {
   cursor: pointer;
 }
 
-.feed-container{
+
+/* Feed */
+.feed-container {
   margin-bottom: 20px;
   min-width: 0;
-  }
+}
 
-  .feed-item{
-    background-color: #4f4b4b;
-    border-radius: 4px;
-    font-size: 1.3rem;
-    overflow: hidden;
-    position: relative;
-  }
+.feed-item {
+  background-color: #4f4b4b;
+  border-radius: 4px;
+  font-size: 1.3rem;
+  overflow: hidden;
+  position: relative;
+}
 
-  .feed-item-row{
-    display: grid;
-    grid-template-columns: 100px auto;
-    height: 100%;
-    min-height: 110px;
-  }
+.feed-item-row {
+  display: grid;
+  grid-template-columns: 100px auto;
+  height: 100%;
+  min-height: 110px;
+}
 
-  .feed-item-image{
-    background-position: 50%;
-    background-repeat: no-repeat;
+.feed-item-image {
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.feed-item-info {
+  padding: 14px 20px;
+  padding-right: 10px;
+}
+
+
+/* mobile css */
+@media (max-width: 768px) {
+  .single-book-img-mob{
+    background-position: 50% 20%;
     background-size: cover;
+    background-repeat: no-repeat;
+    height: 300px;
+    margin-top: 0;
   }
-
-  .feed-item-info{
-    padding: 14px 20px;
-    padding-right: 100px;
+  .single-book-img{
+    display: none;
   }
+  .single-book-container{
+    grid-template-columns: 1fr;
+  }
+}
