--- a/src/old_index.css
+++ b/src/old_index.css
@@ -1,9 +1,6 @@
-* {
-  box-sizing: border-box;
-}
-
 :root {
   font-family: system-ui, sans-serif;
+  line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -20,11 +17,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
 }
 
 /* nav */
@@ -50,23 +42,48 @@ nav a:hover {
   background-color: #111111;
 }
 
-/* single view */
+/* media item card */
+td {
+  padding: 1rem;
+}
 
-.single-book-container{
-  display: grid;
-  grid-template-columns: 210px auto;
-  grid-column-gap: 20px;
+td img {
+  width: 260px;
+  height: 200px;
+  object-fit: cover;
 }
-.book-cover{
-  width: 100%;
-  margin-top: 10px;
+
+td button:hover,
+a:hover {
+  background-color: #111111;
 }
-.single-book-info{
-  margin:0;
-  font-size: 1.5rem;
-  line-height: 1;
-  max-width: 800px;
-  padding: 15px;
+
+td a {
+  color: white;
+  text-decoration: none;
+  background-color: #363636;
+  color: white;
+  border: none;
+  padding: 0.5rem;
+}
+
+/* media item dialog */
+dialog {
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+  color: rgba(255, 255, 255, 0.87);
+}
+
+dialog img,
+video {
+  height: 70%;
+  object-fit: contain;
+}
+
+/* single view */
+img,
+video {
+  max-width: 100%;
 }
 
 /* Form */
@@ -113,64 +130,4 @@ button {
   color: white;
   border: none;
   cursor: pointer;
-}
-
-
-/* Feed */
-.feed-container {
-  margin-bottom: 20px;
-  min-width: 0;
-}
-
-.feed-item {
-  background-color: #4f4b4b;
-  border-radius: 4px;
-  font-size: 1.3rem;
-  overflow: hidden;
-  position: relative;
-}
-
-.feed-item-row {
-  display: grid;
-  grid-template-columns: 100px auto;
-  height: 100%;
-  min-height: 110px;
-}
-
-.feed-item-image {
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.feed-item-info {
-  padding: 5px 15px;
-  padding-right: 10px;
-}
-.feed-item-owner{
-  padding-bottom: 5px;
-  font-size: 1rem;
-}
-
-/* mobile css */
-@media (max-width: 768px) {
-
-  #root {
-    padding: 0;
-  }
-
-
-  .single-book-img-mob{
-    background-position: 50% 20%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 300px;
-    margin-top: 0;
-  }
-  .single-book-img{
-    display: none;
-  }
-  .single-book-container{
-    grid-template-columns: 1fr;
-  }
 }
